feat: enabled preview functionalities